1.7.0
=====

(Caryn Neiswender)
 - [DS-518] Duplicate listing of dependencies in dspace-sword/pom.xml

(Keith Gilbertson)
 - [DS-508] Attachment spelled as attachement in DailyReportEmailer

(Stuart Lewis)
 - [DS-506] embargo-lifter command missing from launcher.xml
 - [DS-526] ItemUpdate - script update

(Mark Wood)
 - [DS-469] DCDate.displayDate(false,*) displays only year
 
 (Ivan Masar)
 - [DS-515] Czech localization of 1.5.2

1.6.0 final
===========

(Alexey Maslov)
 - [DS-289] OAI-PMH + OAI-ORE harvesting support

(Kim Shepherd)
 - [DS-118] File preview link during submission leads to page not found
 - [DS-121] XMLUI Feedback form breaks with multiple hostnames
 - [DS-156] File description not available in XMLUI
 - [DS-198] File descriptions can not be removed/cleared in XMLUI
 - [DS-240] Item validityKey not complete
 - [DS-251] Bulk Metadata Editing: XMLUI aspect and forms
 - [DS-363] JSPUI statistics views
 - [DS-406] View Statistics button does not work in item page
 - [DS-409] JSPUI stats display ignores 'statistics.item.authorization.admin'
 - [DS-414] File downloads listed in collections and communities statistics
 - [DS-438] JSPUI stats - filenames incorrect
 - [DS-418] I18n broken in JSPUI
 - [DS-474] handle.canonical.prefix undocumented

(Claudia Juergen)
 - [DS-114] Links not working due to trailing white space in dspace.url
 - [DS-188] Misspell exclude.type=indentifier in dstat.cfg
 - [DS-197] Deleting a primary bitstream does not clear the primary_bitstream_id on the bundle table
 - [DS-222] Email alerts due to internal errors are not sent, if context is missing
 - [DS-231] Missig file (just some obsolete use of index-all in the current documentation, corrected the docs)
 - [DS-248] Missing admin column in community table in database-schema.sql and update - community admin patch
 - Item Importer - documented the use of non-dc metadata during item import
 - [DS-269] Oracle JDBC connection string wrong in dspace.cfg - ID: 2722093