@@ -129,7 +129,44 @@ public class SWORDAuthenticator
 			throws SWORDException, SWORDErrorException, SWORDAuthenticationException
 	{
 		Context context = this.constructContext(request.getIPAddress());
-		return this.authenticate(context, request);
+		SWORDContext sc = null;
+		try
+        {
+            sc = this.authenticate(context, request);
+        }
+        catch (SWORDException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        catch (SWORDErrorException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        catch (SWORDAuthenticationException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        catch (RuntimeException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+		return sc; 
 	}
 
 	/**
@@ -146,8 +183,45 @@ public class SWORDAuthenticator
 			throws SWORDException, SWORDErrorException, SWORDAuthenticationException
 	{
 		Context context = this.constructContext(request.getIPAddress());
-		return this.authenticate(context, request);
-	}
+		SWORDContext sc = null;
+		try
+        {
+            sc = this.authenticate(context, request);
+        }
+        catch (SWORDException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        catch (SWORDErrorException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        catch (SWORDAuthenticationException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        catch (RuntimeException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        return sc;
+    }
 
 	/**
 	 * Authenticate the incoming service document request.  Calls:
@@ -194,7 +268,44 @@ public class SWORDAuthenticator
 			throws SWORDException, SWORDErrorException, SWORDAuthenticationException
 	{
 		Context context = this.constructContext(deposit.getIPAddress());
-		return this.authenticate(context, deposit);
+		SWORDContext sc = null;
+		try
+		{
+		    sc = this.authenticate(context, deposit);
+		}
+        catch (SWORDException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        catch (SWORDErrorException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        catch (SWORDAuthenticationException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        catch (RuntimeException e)
+        {
+            if (context != null && context.isValid())
+            {
+                context.abort();
+            }
+            throw e;
+        }
+        return sc;
 	}
 
 	/**
